# mystic-codebase-

./: .cursorignore  .gitattributes  .gitconfig.hooks  .gitignore  .gitignore.bak_cursor  AUTOBUY_SYSTEM_README.md  AUTOBUY_SYSTEM_REPAIR_REPORT.md  AUTOBUY_SYSTEM_REPORT.md  CLEANUP_SUMMARY.md  COMPLETE_SYSTEM_CHECK_REPORT.md  DASHBOARD_AND_SERVICES_REPORT.md  DASHBOARD_PAGES_OVERVIEW.md  DOCKER_BLOAT_REPAIR_REPORT.md  DOCKER_DEPENDENCY_FIXES_REPORT.md  DOCKER_OPTIMIZATION_REPORT.md  Dockerfile  Dockerfile.ai-base  Dockerfile.backend-base  Dockerfile.base  Dockerfile.production  ENHANCED_SYSTEM_README.md  ENV_COMPARISON.md  FINAL_REPAIR_SUMMARY.md  FINAL_SYSTEM_STATUS.md  FRONTEND_ISSUES_REPORT.md  Fix-DashboardEndpoints.ps1  LOCAL_TESTING_GUIDE.md  LOGIC_ERRORS_REPORT.md  PROJECT_STATUS.md  PYTHON_VERSION_FIX.md  README.md  REPAIR_SUMMARY.md  REQUIREMENTS_ANALYSIS_REPORT.md  SERVICE_PORTS_OVERVIEW.md  UNUSED_IMPORTS_ANALYSIS.md  ai_cache.json  ai_strategy_endpoints.py  ai_strategy_generator.py  all_requirements_combined.txt  binance_bot.py  (+27 more)
.cursor/: settings.json
.githooks/: pre-commit.bat
.streamlit/: config.toml  config.toml.bak_cursor
ai/: Dockerfile  Dockerfile.optimized  __init__.py  main.py  persistent_cache.py  requirements.txt  requirements_complete.txt
ai_supercomputer/: ai_super_master.py
alerts/: Dockerfile  __init__.py  notify_bot.py  requirements.txt  requirements_alerts_optimized.txt
backend/: .bandit  .flake8  .lizardrc  .pre-commit-config.yaml  .pylama.ini  .radon.cfg  .vulture.cfg  .vulture_whitelist.py  ARCHITECTURE.md  DASHBOARD_ENDPOINTS_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.agents  Dockerfile.optimized  FINAL_DEPLOYMENT_CHECKLIST.md  FINAL_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_REPORT.md  README_AI_TRADING.md  README_QUALITY.md  REFACTORING_SUMMARY.md  ROUTER_ORGANIZATION.md  TRADE_LOGGING_README.md  ULTIMATE_AI_SYSTEM_SUMMARY.md  ULTIMATE_IMPROVEMENTS_SUMMARY.md  UPGRADE_REPORT.md  __init__.py  _ipv4_only.py  advanced_trading.py  agent_cluster.py  agent_orchestrator.py  ai_agent_orchestrator_requirements.txt  ai_agent_orchestrator_service.py  ai_auto_learner.py  ai_auto_retrain.py  ai_cache.json  ai_dao_treasury.py  ai_enhanced_features.py  ai_genetic_algorithm.py  ai_leaderboard_executor.Dockerfile  ai_leaderboard_executor.optimized  ai_leaderboard_executor.py  (+228 more)
blockchain/: bitcoin_miner.py  ethereum_miner.py  mining_pool.py
config/: coins.py
crypto_widget/: README.md  api_server.py  price_poller.py  start_widget.py  widget_chart.html  widget_page_1.html
dashboard/: data_client.py  icons.py  schemas.py  symbols.py
data/: mystic_trading.db
docs/: ADVANCED_AI_README.md  ADVANCED_AI_SYSTEM_README.md  AI_STRATEGY_ENGINE_README.md  AI_STRATEGY_README.md  API_KEYS_SETUP_GUIDE.md  AUTO_RETRAIN_DASHBOARD_README.md  AUTO_WITHDRAW_README.md  BACKEND_FRONTEND_CONNECTION_README.md  CADDY_DEPLOYMENT.md  COMPUTER_VISION_AGENT_SYSTEM_README.md  CRYPTO_AUTOENGINE_README.md  DASHBOARD_FLICKERING_FIX.md  FINAL_EXCEPTION_HANDLING_REPORT.md  FINAL_IMPORTS_AND_SECURITY_REPORT.md  INSTALLATION_SUCCESS.md  LIVE_DEPLOYMENT_README.md  LIVE_ENDPOINTS_README.md  LIVE_SYSTEM_STATUS.md  MODULAR_LIVE_STRUCTURE.md  MODULAR_STRUCTURE_README.md  MULTI_AGENT_AI_SYSTEM_README.md  NLP_AGENT_SYSTEM_README.md  PHASE5_INTERDIMENSIONAL_SYSTEM.md  PYTHON311_REQUIREMENTS_UPDATE.md  QUANTUM_COMPUTING_SYSTEM.md  SECURITY_FIXES_REPORT.md  TIERED_SYSTEM_README.md  TRADING_BOTS_README.md  WALLET_SYSTEM_README.md  WINDOWS_COMMANDS.md  WINDOWS_SETUP.md  deployment.md  exception_handling_report.md  launch_checklist.md
edge/: edge_node_1.py  edge_node_2.py  edge_orchestrator.py
fiveg/: fiveg_core.py  fiveg_ran.py  fiveg_slice_manager.py
frontend/: .eslintrc.json  .prettierignore  .prettierrc  .prettierrc.json  AI_INTEGRATION_SUMMARY.md  COMPREHENSIVE_WIDGET_SUMMARY.md  DASHBOARD_SUMMARY.md  LIVE_DATA_INTEGRATION_SUMMARY.md  README.md  README_STREAMLIT.md  clean-and-rebuild.ps1  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  requirements_consolidated.txt  tsconfig.json  vite.config.js
kong/: quantum-services.yml
middleware/: Dockerfile  __init__.py  middleware_router.py  requirements.txt  requirements_middleware_optimized.txt
mlflow/: mlflow.db
mystic_ui/: __init__.py  api_client.py  app.py  config.py  data_client.py  display.py  icon_loader.py  icons.py  main.py  main_single_exchange.py  state.py  top10_resolver.py  ui_common.py  ui_guard.py
prometheus/: prometheus.yml
qkd/: qkd_alice.py
quantum/: quantum_machine_learning.py  quantum_optimization.py  quantum_trading_engine.py
requirements/: ai.txt  alerts.txt  backend.txt  base.txt  middleware.txt  minimal_base.txt  ml.txt
requirements_archive/: requirements_ultimate.txt
satellite/: satellite_analytics.py  satellite_processor.py  satellite_receiver.py
scripts/: Caddyfile  Caddyfile.production  build-base-image.ps1  build-optimized.ps1  cleanup-docker.ps1  create-desktop-shortcut.ps1  deploy-caddy.sh  docker-backend.ps1  docker-build-clean.ps1  docker-compose-full.ps1  docker-frontend.ps1  fix-logic-errors.ps1  install-caddy.sh  install-missing-packages.ps1  install-requirements.ps1  launch-live.ps1  launch.ps1  launch_advanced_ai_system.ps1  launch_computer_vision_system.ps1  launch_nlp_system.ps1  launch_phase5_agents.ps1  launch_quantum_system.ps1  patch_datetime_utc.py  patch_html_encoding.py  patch_router_prefix.py  rebuild-agents-fix.ps1  refactor_imports.py  run-ai-strategies.ps1  run-auto-withdraw.ps1  run_smoke_tests.ps1  setup-auto-withdraw.ps1  setup-dev.ps1  setup-firewall.ps1  setup-python310.ps1  setup-python311.ps1  start-advanced-ai-docker.ps1  start-backend.bat  start-docker-modular.ps1  start-frontend.bat  start-live-trading.ps1  (+4 more)
services/: ai_strategy_service.py  autobuy_service.py  blockchain_service.py  cache_or_redis_client.py  coingecko_service.py  experimental_service.py  mining_service.py  quantum_service.py
streamlit/: __init__.py  api_client.py  app.py  data_client.py  icons.py  main.py.bak_cursor  main_single_exchange.py  requirements.txt  (+2 more)
(+473 files in other folders)
